# osheightsmith

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/osheightsmith/: __init__.py  asc_parser.py  cli.py  grid_reference.py  heightmap.py
tests/: conftest.py  test_asc_parser.py  test_cli.py  test_grid_reference.py  test_heightmap.py
