[project]
name = "osheightsmith"
version = "0.1.0"
description = "A Python CLI tool for creating PNG height maps from Ordnance Survey Terrain 50 data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "scipy>=1.16.2",
    "typer>=0.19.2",
]

[project.scripts]
osheightsmith = "src.osheightsmith.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]

[tool.ruff]
exclude = [".git", ".pytest_cache", ".ruff_cache", ".venv", ".vscode"]
line-length = 100
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/osheightsmith",
    "--cov-report=term-missing",
]
